@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.2.0
 
-12 August 2016
+26 September 2016
 
 
 1. Introduction
@@ -191,7 +191,8 @@ None
 
 20. CTA interface
 -----------------
-None
+The dimension of response tables is now checked for being consistent with the
+axis dimension (#1848).
 
 
 21. COMPTEL interface
